--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "tsc",
     "dev:server": "NODE_ENV=dev ts-node-dev -r tsconfig-paths/register --inspect --no-notify --transpileOnly --ignore-watch node_modules src/shared/infra/http/server.ts",
-    "start": "ts-node src/server.ts"
+    "start": "ts-node dist/server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
