feat: create route to send notifications

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev:server": "NODE_ENV=dev ts-node-dev -r tsconfig-paths/register --inspect --no-notify --transpileOnly --ignore-watch node_modules src/shared/infra/http/server.ts",
+    "dev:server": "NODE_ENV=dev ts-node-dev -r tsconfig-paths/register --inspect --no-notify --transpile-only --ignore-watch node_modules src/server.ts",
     "start": "node dist/server.js"
   },
   "dependencies": {
